--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
   <body>
     <h1>Data Structures and Modern Operators</h1>
     <!-- <script src="script.js"></script>
-    <script src="Coding_Challenge-1.js"></script> -->
+    <script src="Coding_Challenge-1.js"></script>
     <script src="Coding_Challenge-2.js"></script>
+    <script src="Coding_Challenge-3.js"></script> -->
+    <script src="Coding_Challenge-4.js"></script>
   </body>
 </html>
